--- a/DEMOHTML.html
+++ b/DEMOHTML.html
@@ -24,13 +24,13 @@
                 </li>
             </li>
             <li class="list">
-                <a href="http://127.0.0.1:5501/login.html" >
+                <a href="http://127.0.0.1:5501/signIn.html" >
              <div class="icon"> <ion-icon name="log-in-outline"></ion-icon></div>
              <div class="text" >Login</div>
              <span class="circle"></span>
                 </a>
             </li>
-            <li class="list" >
+            <li class="list" id="lostOption">
                 <a href="http://127.0.0.1:5501/cartoonL.html" >
              <span class="icon"> <ion-icon name="sad-outline"></ion-icon></span>
              <span class="text">Lost</span>
@@ -64,7 +64,7 @@
 
          <div class="text-box">
            <span> <h1 > Lost & Found  </h1> </span> 
-         <a href="http://127.0.0.1:5500/login.html#">
+         <a href="http://127.0.0.1:5501/signUp.html">
            <button class="button">Sign Up</button>
            </a>
 
@@ -120,5 +120,3 @@
     </body>
     <script src="DEMOJAVA.js"></script>
     </html>
-     
-          
