--- a/cartoonL.html
+++ b/cartoonL.html
@@ -23,14 +23,16 @@
     <script>
         function openReportPage() {
             // Specify the URL you want to navigate to
-            var url = "http://127.0.0.1:5501/CARD_LOST.html";
+           // var url = "http://127.0.0.1:5501/CARD_LOST.html";
         
             // Open the URL in a new tab or window
-            window.open(url);
+           // window.open(url);
+           window.location.href="http://127.0.0.1:5501/CARD_LOST.html";
         }
         function openSearchPage(){
-            var url="http://127.0.0.1:5501/CARDLOST.html";
-            window.open(url);
+            //var url="http://127.0.0.1:5501/CARDLOST.html";
+            //window.open(url);
+            window.location.href="http://127.0.0.1:5501/CARDLOST.html";
     }
     </script>
 </html>
