--- a/user.html
+++ b/user.html
@@ -69,53 +69,7 @@
             src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
-<!-- <nav class="navbar">
-    <ul>
-        <li class="list active">
-            <a href="#home" onclick="showAllItems()">
-                <span class="icon"> <ion-icon name="home-outline"></ion-icon></span>
-                <span class="text">Home</span>
-                <span class="circle"></span>
-            </a>
-        </li>
-        <li class="list">
-            <a href="http://127.0.0.1:5500/login.html#">
-                <div class="icon"> <ion-icon name="log-in-outline"></ion-icon></div>
-                <div class="text">Login</div>
-                <span class="circle"></span>
-            </a>
-        </li>
-        <li class="list">
-            <a href="http://127.0.0.1:5500/cartoonL.html" onclick="showItems('lost')">
-                <span class="icon"> <ion-icon name="sad-outline"></ion-icon></span>
-                <span class="text">Lost</span>
-                <span class="circle"></span>
-            </a>
-        </li>
-        <li class="list">
-            <a href="http://127.0.0.1:5500/cartoonFOUND.html" onclick="showItems('found')">
-                <span class="icon"><ion-icon name="happy-outline"></ion-icon></span>
-                <span class="text">Found</span>
-                <span class="circle"></span>
-            </a>
-        </li>
-        <li class="list">
-            <a href="http://127.0.0.1:5501/contactus.html">
-                <span class="icon"><ion-icon name="chatbubble-ellipses-outline"></ion-icon></span>
-                <span class="text">Contact</span>
-                <span class="circle"></span>
-            </a>
-        </li>
-        <li class="list">
-            <a href="http://127.0.0.1:5501/user.html#home">
-                <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
-                <span class="text">Profile</span>
-                <span class="circle"></span>
-            </a>
-        </li>
-        <div class="indicater"></div>
-    </ul>
-</nav> -->
+
 
 <div class="header__wrapper center-align">
     <header></header>
@@ -146,6 +100,7 @@
         <div class="right__col center-align">
             <div class="photos" id="myitems">
                 <img data-category="lost" src="contacthelp.png" alt="My Items 1"/>
+                <span class="delete-icon" onclick="deleteImage('My Items 1')">Delete</span>
                 <!-- Add other details as needed -->
                 <img data-category="lost" src="contacthelp.png" alt="My Items 2"/>
                 <!-- Add other details as needed -->
@@ -164,6 +119,7 @@
     </div>
 </div>
 
+
 <script>
     function toggleItems() {
         var itemsContent = document.getElementById("myitems");
@@ -181,11 +137,34 @@
     });
 }
 
-
     function showAllItems() {
         var items = document.querySelectorAll('.photos img');
         items.forEach(function (item) {
             item.style.display = 'block';
+        });
+    }
+    function deleteImage(imageName) {
+        // Send a request to the backend to delete the image
+        fetch('/delete-image', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({ imageName: imageName })
+        })
+        .then(response => {
+            if (response.ok) {
+                // If deletion is successful, remove the image from the frontend
+                const imageElement = document.querySelector(`img[alt="${imageName}"]`);
+                if (imageElement) {
+                    imageElement.parentNode.remove(); // Remove the parent div
+                }
+            } else {
+                console.error('Failed to delete image');
+            }
+        })
+        .catch(error => {
+            console.error('Error:', error);
         });
     }
 </script>
