--- a/DEMOHTML.html
+++ b/DEMOHTML.html
@@ -24,35 +24,35 @@
                 </li>
             </li>
             <li class="list">
-                <a href="http://127.0.0.1:5501/signIn.html" >
+                <a href="http://127.0.0.1:5500/Lost-Found-Website/signIn.html" >
              <div class="icon"> <ion-icon name="log-in-outline"></ion-icon></div>
              <div class="text" >Login</div>
              <span class="circle"></span>
                 </a>
             </li>
             <li class="list" id="lostOption">
-                <a href="http://127.0.0.1:5501/cartoonL.html" >
+                <a href="http://127.0.0.1:5500/Lost-Found-Website/cartoonL.html" >
              <span class="icon"> <ion-icon name="sad-outline"></ion-icon></span>
              <span class="text">Lost</span>
              <span class="circle"></span>
                 </a>
             </li>
             <li class="list">
-                <a href="http://127.0.0.1:5501/cartoonFOUND.html">
+                <a href="http://127.0.0.1:5500/Lost-Found-Website/cartoonFOUND.html">
              <span class="icon"><ion-icon name="happy-outline"></ion-icon></span>
              <span class="text">Found</span>
              <span class="circle"></span>
                 </a>
             </li>
             <li class="list">
-                <a href="http://127.0.0.1:5501/contactus.html">
+                <a href="http://127.0.0.1:5500/Lost-Found-Website/contactus.html">
              <span class="icon"><ion-icon name="chatbubble-ellipses-outline"></ion-icon></span>
              <span class="text">Contact</span>
              <span class="circle"></span>
                 </a>
             </li>
             <li class="list">
-                <a href="http://127.0.0.1:5501/user.html#home">
+                <a href="#" onclick="redirectToProfile()">
              <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
              <span class="text">Profile</span>
              <span class="circle"></span>
@@ -64,7 +64,7 @@
 
          <div class="text-box">
            <span> <h1 > Lost & Found  </h1> </span> 
-         <a href="http://127.0.0.1:5501/signUp.html">
+         <a href="http://127.0.0.1:5500/Lost-Found-Website/signUp.html">
            <button class="button">Sign Up</button>
            </a>
 
