--- a/cartoonL.html
+++ b/cartoonL.html
@@ -27,12 +27,12 @@
         
             // Open the URL in a new tab or window
            // window.open(url);
-           window.location.href="http://127.0.0.1:5501/CARD_LOST.html";
+           window.location.href="http://127.0.0.1:5500/Lost-Found-Website/CARD_LOST.html";
         }
         function openSearchPage(){
             //var url="http://127.0.0.1:5501/CARDLOST.html";
             //window.open(url);
-            window.location.href="http://127.0.0.1:5501/CARDLOST.html";
+            window.location.href="http://127.0.0.1:5500/Lost-Found-Website/CARDLOST.html";
     }
     </script>
 </html>
